[package]
name = "aces-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ACES (Arithmetic Channel Encryption Scheme) implementation"

[dependencies]
num-integer = "0.1.46"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
csv = "1"
nalgebra = "0.33.2"
itertools = "0.14.0"
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3         # 最高レベルの速度最適化
lto = "fat"           # 最大限のリンク時最適化を有効化
codegen-units = 1     # コード生成ユニットを減らし、最適化を強化